--- a/siganos.html
+++ b/siganos.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="es"><head>
+
   
-  <meta charset="UTF-8">
-  <title>BOLSALUD GUATEMALA</title>
+  <meta charset="UTF-8"><title>BOLSALUD GUATEMALA</title>
+  
 
   
   
-  <link rel="stylesheet" href="miestilo.css">
-
-</head><body style="background-color: rgb(210, 210, 210); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
+  <link rel="stylesheet" href="miestilo.css"></head><body style="background-color: rgb(210, 210, 210); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
 <!-- Menú de navegación del sitio -->
 <ul class="navbar">
 
@@ -31,22 +30,33 @@
 <div style="text-align: center;">
 </div>
 
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Tw<o:p></o:p></p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">@bolsaludguatemala<br>
+<o:p></o:p></p>
 
 <div style="text-align: center;">
 </div>
 
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Youtube<o:p></o:p></p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Youtube <br>
+</p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw">https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw</a></p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">nuestro blog<br>
+</p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><span style="font-family: Rockwell;">https://bolsaludguatemala.blogspot.com</span><br>
+<o:p></o:p></p>
+
 
 <div style="text-align: center;">
 </div>
 
 <p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="mailto:bolsaludguatemala@gmail.com">bolsaludguatemala@gmail.com</a></p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="mailto:bolsaludguatemala@gmail.com"><br>
+</a></p>
+
 
 <div style="text-align: center;"><span style="font-family: Rockwell; color: rgb(30, 101, 109);">
 whatsapp +502 3025-0783</span></div>
 <!-- Firma y fecha de la página, ¡sólo por cortesía! -->
 <address style="color: rgb(30, 101, 109);">Creada en julio del 2021<br>
-Víctor Samayoa.</address>
+Víctor S<img src="bolsalud/ed97575f-f419-4feb-aad3-282c7d3ec88d%20%282%29.jpg" alt="">amayoa.</address>
 
 </body></html>
