--- a/siganos.html
+++ b/siganos.html
@@ -55,8 +55,8 @@
 
 <div style="text-align: center;"><span style="font-family: Rockwell; color: rgb(30, 101, 109);">
 whatsapp +502 3025-0783</span></div>
-<!-- Firma y fecha de la página, ¡sólo por cortesía! -->
+<img src="bolsalud/ed97575f-f419-4feb-aad3-282c7d3ec88d%20%282%29.jpg" alt=""><!-- Firma y fecha de la página, ¡sólo por cortesía! -->
 <address style="color: rgb(30, 101, 109);">Creada en julio del 2021<br>
-Víctor S<img src="bolsalud/ed97575f-f419-4feb-aad3-282c7d3ec88d%20%282%29.jpg" alt="">amayoa.</address>
+Víctor Samayoa.</address>
 
 </body></html>
