--- a/siganos.html
+++ b/siganos.html
@@ -49,12 +49,12 @@
 </div>
 
 <p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="mailto:bolsaludguatemala@gmail.com">bolsaludguatemala@gmail.com</a></p>
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="mailto:bolsaludguatemala@gmail.com"><br>
-</a></p>
-
 
 <div style="text-align: center;"><span style="font-family: Rockwell; color: rgb(30, 101, 109);">
-whatsapp +502 3025-0783</span></div>
+whatsapp +502 3025-0783<br>
+<br>
+<br>
+</span></div>
 <img src="bolsalud/ed97575f-f419-4feb-aad3-282c7d3ec88d%20%282%29.jpg" alt=""><!-- Firma y fecha de la página, ¡sólo por cortesía! -->
 <address style="color: rgb(30, 101, 109);">Creada en julio del 2021<br>
 Víctor Samayoa.</address>
