--- a/siganos.html
+++ b/siganos.html
@@ -30,7 +30,7 @@
 <div style="text-align: center;">
 </div>
 
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">@bolsaludguatemala<br>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="https://www.facebook.com/bolsaludgutemala/">https://www.facebook.com/bolsaludgutemala/</a><br>
 <o:p></o:p></p>
 
 <div style="text-align: center;">
