--- a/siganos.html
+++ b/siganos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="es"><head>
 
+
   
   <meta charset="UTF-8"><title>BOLSALUD GUATEMALA</title>
   
@@ -24,38 +25,52 @@
 </ul>
 
 <!-- Contenido principal -->
-<h1 style="text-align: center; color: rgb(30, 101, 109); font-family: Rockwell;">Siganos en las redes:</h1>
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Fb</p>
+<h1 style="text-align: center; color: rgb(30, 101, 109); font-family: Rockwell; margin-left: 120px;">Siganos en las redes:</h1>
 
-<div style="text-align: center;">
+
+<div style="text-align: center; margin-left: 120px;">
 </div>
 
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="https://www.facebook.com/bolsaludgutemala/">https://www.facebook.com/bolsaludgutemala/</a><br>
-<o:p></o:p></p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center; margin-left: 120px;" class="MsoNormal">Fb<br>
+<a href="https://www.facebook.com/bolsaludgutemala/">https://www.facebook.com/bolsaludgutemala/</a></p>
 
-<div style="text-align: center;">
-</div>
+<p style="text-align: center; margin-left: 120px;" class="MsoNormal"><span style="color: rgb(30, 101, 109);">instagram</span><br>
+<a href="https://www.instagram.com/bolsalud/">https://www.instagram.com/bolsalud/ <br>
+</a></p>
+<p style="text-align: center; margin-left: 120px;" class="MsoNormal">
 
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Youtube <br>
 </p>
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw">https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw</a></p>
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">nuestro blog<br>
-</p>
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><span style="font-family: Rockwell;">https://bolsaludguatemala.blogspot.com</span><br>
-<o:p></o:p></p>
+<p style="text-align: center; margin-left: 120px;" class="MsoNormal"><span style="color: rgb(30, 101, 109);">tw</span><br style="color: rgb(30, 101, 109);">
+<span style="color: rgb(30, 101, 109);">@BolsaludG</span> <o:p></o:p></p>
 
 
-<div style="text-align: center;">
+
+
+<div style="text-align: center; margin-left: 120px;">
 </div>
 
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="mailto:bolsaludguatemala@gmail.com">bolsaludguatemala@gmail.com</a></p>
 
-<div style="text-align: center;"><span style="font-family: Rockwell; color: rgb(30, 101, 109);">
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center; margin-left: 120px;" class="MsoNormal">Youtube <br>
+<a href="https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw">https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw</a></p>
+
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center; margin-left: 120px;" class="MsoNormal">nuestro blog<br>
+<span style="font-family: Rockwell;">https://bolsaludguatemala.blogspot.com</span></p>
+
+
+<div style="text-align: center; margin-left: 120px;">
+</div>
+
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center; margin-left: 120px;" class="MsoNormal">correo electronico<br>
+
+<o:p></o:p><a href="mailto:bolsaludguatemala@gmail.com">bolsaludguatemala@gmail.com</a></p>
+
+<div style="text-align: center; margin-left: 120px;"><span style="font-family: Rockwell; color: rgb(30, 101, 109);">
 whatsapp +502 3025-0783<br>
 <br>
 <br>
 </span></div>
-<img src="bolsalud/ed97575f-f419-4feb-aad3-282c7d3ec88d%20%282%29.jpg" alt=""><!-- Firma y fecha de la página, ¡sólo por cortesía! -->
+<div style="margin-left: 120px;"><img src="bolsalud/ed97575f-f419-4feb-aad3-282c7d3ec88d%20%282%29.jpg" alt=""><!-- Firma y fecha de la página, ¡sólo por cortesía! --></div>
+
 <address style="color: rgb(30, 101, 109);">Creada en julio del 2021<br>
 Víctor Samayoa.</address>
 
