--- a/siganos.html
+++ b/siganos.html
@@ -41,7 +41,7 @@
 
 </p>
 <p style="text-align: center; margin-left: 120px;" class="MsoNormal"><span style="color: rgb(30, 101, 109);">tw</span><br style="color: rgb(30, 101, 109);">
-<span style="color: rgb(30, 101, 109);">@BolsaludG</span> <o:p></o:p></p>
+<a href="https://twitter.com/BolsaludG"><span style="color: rgb(30, 101, 109);">@BolsaludG</span></a> <o:p></o:p></p>
 
 
 
@@ -54,7 +54,7 @@
 <a href="https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw">https://www.youtube.com/channel/UCHZGd7b6lIZfHdy7HL1HJhw</a></p>
 
 <p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center; margin-left: 120px;" class="MsoNormal">nuestro blog<br>
-<span style="font-family: Rockwell;">https://bolsaludguatemala.blogspot.com</span></p>
+<a href="https://bolsaludguatemala.blogspot.com"><span style="font-family: Rockwell;">https://bolsaludguatemala.blogspot.com</span></a></p>
 
 
 <div style="text-align: center; margin-left: 120px;">
