--- a/noticia.html
+++ b/noticia.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="es"><head>
+
   
-  <meta charset="UTF-8">
-  <title>BOLSALUD GUATEMALA</title>
+  <meta charset="UTF-8"><title>BOLSALUD GUATEMALA</title>
+  
 
   
   
-  <link rel="stylesheet" href="miestilo.css">
-
-</head><body style="color: rgb(0, 0, 0); background-color: rgb(210, 210, 210);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
+  <link rel="stylesheet" href="miestilo.css"></head><body style="color: rgb(0, 0, 0); background-color: rgb(210, 210, 210);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
 <!-- Menú de navegación del sitio -->
 <ul class="navbar">
 
@@ -31,7 +30,12 @@
 contamos con
 nuestro blog donde se actualizarán todas las noticias acerca de
 Bolsalud en
-nuestro siguiente enlace oficial:</span><span style="line-height: 107%;"><o:p></o:p></span></p>
+nuestro siguiente enlace oficial:</span></p><br>
+<p style="text-align: center; font-family: Rockwell;" class="MsoNormal"><br>
+</p>
+<p style="text-align: center; font-family: Rockwell;" class="MsoNormal"><a href="https://bolsaludguatemala.blogspot.com/">https://bolsaludguatemala.blogspot.com/</a><br>
+<span style="background: transparent none repeat scroll 0% 50%; line-height: 107%; color: rgb(30, 101, 109); -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial;"></span><span style="line-height: 107%;"><o:p></o:p></span></p>
+
 
 <br style="font-family: Rockwell;">
 
