--- a/contacto.html
+++ b/contacto.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="es"><head>
+
   
-  <meta charset="UTF-8">
-  <title>BOLSALUD GUATEMALA</title>
+  <meta charset="UTF-8"><title>BOLSALUD GUATEMALA</title>
+  
 
   
   
-  <link rel="stylesheet" href="miestilo.css">
-
-</head><body style="background-color: rgb(210, 210, 210); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
+  <link rel="stylesheet" href="miestilo.css"></head><body style="background-color: rgb(210, 210, 210); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
 <!-- Menú de navegación del sitio -->
 <ul class="navbar">
 
@@ -37,9 +36,16 @@ oficiales<o:p></o:p></p>
 <div style="text-align: center;">
 </div>
 <p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Fb</p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="https://www.facebook.com/bolsaludgutemala/">https://www.facebook.com/bolsaludgutemala/</a></p>
+
 <div style="text-align: center;">
 </div>
-<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Tw<o:p></o:p></p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Tw</p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">https://twitter.com/BolsaludG</p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">instagram</p>
+<p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal"><a href="https://www.instagram.com/bolsalud/">https://www.instagram.com/bolsalud/ </a><br>
+<o:p></o:p></p>
+
 <div style="text-align: center;">
 </div>
 <p style="font-family: Rockwell; color: rgb(30, 101, 109); text-align: center;" class="MsoNormal">Youtube<o:p></o:p></p>
